# random_math_question_generator

./: .gitignore  CODE_OF_CONDUCT.md  README.md  index.html  main.js  package-lock.json  package.json  pnpm-lock.yaml  quotes_of_the_day.txt  robots.txt  script.js  script.min.js  server.js  sitemap.xml  style.css  style.min.css  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: deploy.yml
modules/: algebra.js  algebra.min.js  arithmetic.full.js  arithmetic.js  discreteMathematics.full.js  discreteMathematics.min.js  linearAlgebra.js  trigonometry.min.js
src/: index.html  script.js  script.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/main/: answer.test.ts  answer.ts  constants.ts  dom.ts  events.ts  generation.ts  mcq.ts  questionGenerator.ts  session.ts  settings.ts  state.ts  theme.ts  topics.ts  ui.ts
src/modules/: algebra.js  arithmetic.js  calculus.js  calculus.min.js  discreteMathematics.js  linearAlgebra.js  trigonometry.js
src/modules/Algebra/: algebraAdvanced.ts  algebraBasics.ts  algebraEquations.ts  algebraGraphingPolynomials.ts  algebraInPrecalculus.ts  algebraUtils.ts  index.ts
src/modules/Arithmetic/: arithmeticAdvanced.ts  arithmeticBasic.ts  arithmeticUtils.ts  index.ts
src/modules/Calculus/: calculusApplicationsDiff.ts  calculusDerivatives.ts  calculusGraphical.ts  calculusIntegrals.ts  calculusIntegrationAdvanced.ts  calculusLimitsContinuity.ts  calculusLimitsRelated.ts  calculusParametricPolarVector.ts  calculusSequencesSeries.ts  calculusUtils.ts  index.ts
src/types/: global.d.ts
(+71 files in other folders)
