[package]
name = "random_math_question_generator"
version = "3.0.0"
description = "Random math question generator made with HTML, CSS, and JS."
authors = ["richie-rich90454"]
license = "Apache-2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "^2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "^2", features = ["shell-open"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
